<resources>
    <string name="app_name">FreeGarden</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="remember_me">Remember me</string>
    <string name="password">Password:</string>
    <string name="login">Login:</string>
    <string name="freegarden">FreeGarden</string>
    <string name="sign_in">Sign in</string>
    <string name="goalmainTitle">titleNewUserGoal</string>
    <string name="newGardenMainTitle">Register a new garden !</string>
    <string name="titleTitle">Choose a title !</string>
    <string name="addressTitle">Your address</string>
    <string name="street">Street :</string>
    <string name="street_number">Street number :</string>
    <string name="city">City :</string>
    <string name="postal_code">Postal code :</string>
    <string name="limitationTitle">Limitation</string>
    <string name="limitation">How many users can your garden accept ?</string>
    <string name="registerGardenButton">Register !</string>
</resources>
