<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.henallux.freegarden.GardenRegisterActivity">

    <!--Layout vertical général-->
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="344dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayoutCompat"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent">
        <TextView
            android:text="@string/newGardenMainTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"/>
        <!--Layout horizontal englobant les différents champs-->
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"/>
            <!--Layout vertical englobant les différents champs-->
            <ScrollView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="80">
                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="80">
                    <TextView
                        android:text="@string/titleTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <!--Layout horizontal global englobant la section title-->
                    <android.support.v7.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <android.support.v4.widget.Space
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="10"/>
                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:hint="Title"
                            android:layout_weight="90"/>
                    </android.support.v7.widget.LinearLayoutCompat>
                    <TextView
                        android:text="@string/addressTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <!--Layout horizontal global englobant la section adresse-->
                    <android.support.v7.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <android.support.v4.widget.Space
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="10"/>
                        <!--Layout vertical général de la section adresse-->
                        <android.support.v7.widget.LinearLayoutCompat
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="90">
                            <android.support.v7.widget.LinearLayoutCompat
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                                <TextView
                                    android:text="@string/street"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="50"/>
                                <EditText
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:hint="Street"
                                    android:layout_weight="50"/>
                            </android.support.v7.widget.LinearLayoutCompat>
                            <android.support.v7.widget.LinearLayoutCompat
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                                <TextView
                                    android:text="@string/street_number"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="50"/>
                                <EditText
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:hint="0"
                                    android:layout_weight="50"/>
                            </android.support.v7.widget.LinearLayoutCompat>
                            <android.support.v7.widget.LinearLayoutCompat
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                                <TextView
                                    android:text="@string/city"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="50"/>
                                <EditText
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:hint="City"
                                    android:layout_weight="50"/>
                            </android.support.v7.widget.LinearLayoutCompat>
                            <android.support.v7.widget.LinearLayoutCompat
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                                <TextView
                                    android:text="@string/postal_code"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="50"/>
                                <EditText
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:hint="00000"
                                    android:layout_weight="50"/>
                            </android.support.v7.widget.LinearLayoutCompat>
                        </android.support.v7.widget.LinearLayoutCompat>
                    </android.support.v7.widget.LinearLayoutCompat>

                    <TextView
                        android:text="@string/limitationTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <!--Layout horizontal global englobant la section limitation-->
                    <android.support.v7.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <android.support.v4.widget.Space
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="10"/>
                        <TextView
                            android:text="@string/limitation"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="70"
                            android:labelFor="@+id/limitationInput"
                            android:layout_marginBottom="5dp"/>
                        <EditText
                            android:id="@+id/limitationInput"
                            android:hint="0"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="20"/>
                    </android.support.v7.widget.LinearLayoutCompat>
                    <!--Layout du bouton register-->
                    <android.support.v7.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp">
                        <android.support.v4.widget.Space
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"/>
                        <Button
                            android:id="@+id/registerGardenButton"
                            android:text="@string/registerGardenButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:onClick="mainMenu"/>
                    </android.support.v7.widget.LinearLayoutCompat>
                </android.support.v7.widget.LinearLayoutCompat>
            </ScrollView>
            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"/>
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>

</android.support.constraint.ConstraintLayout>
